# Remote_System

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: CameraController.cpp.A9E62DF06B1CB9DC.idx  CameraController.h.9BF98BE47A09E2AD.idx  CameraManager.cpp.66DE9A2AB129BA06.idx  CameraManager.h.0811A4D4D621B4DD.idx  CameraWidget.cpp.3CA6F3BD19D428CB.idx  CameraWidget.h.1ED1039717F95DA6.idx  ConnectionStatusModel.cpp.FAE2CE38FC00B3ED.idx  ConnectionStatusModel.h.026E54985FAAAFEB.idx  DeviceConfigModel.cpp.1D2652F2F4CC15A6.idx  DeviceConfigModel.h.05BACFDDC59384C9.idx  DeviceController.cpp.0B8A7D03C0F67803.idx  DeviceController.h.5DA008D6454FE9F1.idx  IpConfigView.cpp.9A3708CAF281839B.idx  IpConfigView.h.2BC68AD681194D6E.idx  MainControlView.cpp.9C2E11A601A1B0AD.idx  MainControlView.h.FF550315490374A0.idx  MainController.cpp.27C9B589825DDAC5.idx  MainController.h.3A4E897EEC9C3FA0.idx  MainWindow.cpp.BA57214FD5C05DA3.idx  MainWindow.h.ECD6F9F6CC3A5930.idx  MjpegStreamHandler.cpp.DA7BF8A0B89D9231.idx  MjpegStreamHandler.h.504745B70FACCDB4.idx  NetworkConfigModel.cpp.52E2656C41EB7392.idx  NetworkConfigModel.h.274C7F815A7E83A5.idx  NetworkController.cpp.A9C8B798588C8977.idx  NetworkController.h.3F243D8374624B35.idx  NetworkUtils.cpp.209924956EB648F7.idx  NetworkUtils.h.2BE9FADB781CE838.idx  TcpClient.cpp.170961FDC3767B0A.idx  TcpClient.h.6FE9E2611AEC25C9.idx  TcpServer.cpp.0EBCEDABA1345B4B.idx  TcpServer.h.DF19258B0194E60F.idx  WifiInfoModel.cpp.9C37C590E5862205.idx  WifiInfoModel.h.24694008758D13F5.idx  WifiInfoView.cpp.CE071727ECD84DE7.idx  WifiInfoView.h.A5FF6DF8A3F040DA.idx  main.cpp.9EA5054D1207EA0F.idx
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/camera/: CameraManager.cpp  CameraManager.h  MjpegStreamHandler.cpp  MjpegStreamHandler.h
src/controllers/: CameraController.cpp  CameraController.h  DeviceController.cpp  DeviceController.h  MainController.cpp  MainController.h  NetworkController.cpp  NetworkController.h
src/models/: ConnectionStatusModel.cpp  ConnectionStatusModel.h  DeviceConfigModel.cpp  DeviceConfigModel.h  NetworkConfigModel.cpp  NetworkConfigModel.h  WifiInfoModel.cpp  WifiInfoModel.h
src/network/: NetworkUtils.cpp  NetworkUtils.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
src/views/: CameraWidget.cpp  CameraWidget.h  IpConfigView.cpp  IpConfigView.h  IpConfigView.ui  MainControlView.cpp  MainControlView.h  MainControlView.ui  WifiInfoView.cpp  WifiInfoView.h
ui/: IpConfigView.ui  MainControlView.ui  WifiInfoView.ui
